Fix delete product

--- a/CosmeticShop/CosmeticShop/Views/Traiding/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Traiding/Index.cshtml
@@ -51,82 +51,88 @@
 </section>
 
 
-
 <section class="container">
-
     <div class="navigation">
         <div id="aside">
             <div class="list-group list-group-flush">
-                <div class="list-group-item">
-                    <h4 class="text-title">Группа товаров:</h4>
-                    <div data-spy="scroll" data-target="#navbar-example2" data-offset="0" class="scroll">
-                        <div class="checkbox"><label><input type="checkbox" name="brands[]" value="1"> Блеск для
-                                губ</label>
-                        </div>
-                        <div class="checkbox"><label><input type="checkbox" name="brands[]" value="2">
-                                Помада для губ</label></div>
-                        <div class="checkbox"><label><input type="checkbox" name="brands[]" value="3">
-                                Палетка теней</label></div>
-                        <div class="checkbox"><label><input type="checkbox" name="brands[]" value="4"> Палетка
-                                для
-                                макияжа</label></div>
-                        <div class="checkbox"><label><input type="checkbox" name="brands[]" value="5"> Тональный
-                                крем</label></div>
-                        <div class="checkbox"><label><input type="checkbox" name="brands[]" value="6"> Крем для
-                                рук</label></div>
-                        <div class="checkbox"><label><input type="checkbox" name="brands[]" value="7"> Крем для
-                                лица</label></div>
-                    </div>
-                </div>
-                <div class="list-group-item">
-                    <h4 class="text-title">Цена:</h4>
-                    <div id="cost">
-                        <div class="text-number d-inline">
-                            <label>
-                                от <input class="numbers" type="number" value="1" min="1" step="any" />
-                            </label>
-                        </div>
-                        <div class="text-number d-inline">
-                            <label>
-                                до <input class="numbers" type="number" value="1" min="1" step="any" />
-                            </label>
+                <form method="get" asp-action="Index" asp-controller="Traiding">
+                    <div class="list-group-item">
+                        <h4 class="text-title">Группа товаров:</h4>
+                        <div data-spy="scroll" data-target="#navbar-example2" data-offset="0" class="scroll">
+                            @foreach (var category in Model.FilterViewModel.Categories)
+                            {
+                                <div class="checkbox">
+                                    <label>
+                                        @if(Model.FilterViewModel.SelectedCategories.ToList().Contains(int.Parse(category.Value)))
+                                        {
+                                            <input type="checkbox" name="CategoriesId" value="@category.Value" checked>@category.Text
+                                        }
+                                        else
+                                        {
+                                            <input type="checkbox" name="CategoriesId" value="@category.Value">@category.Text
+                                        }
+                                    </label>
+                                </div>
+                            }
                         </div>
                     </div>
-                </div>
-                <div class="list-group-item">
-                    <a href="#" class="btn btn-filter">Применить фильтр</a>
-
-                </div>
+                    <div class="list-group-item">
+                        <h4 class="text-title">Цена:</h4>
+                        <div id="cost">
+                            <div class="text-number d-inline">
+                                <label>
+                                    от <input class="numbers" name="CostFrom" type="number" min="0" step="any" 
+                                    value="@Model.FilterViewModel.SelectedCostForm"/>
+                                </label>
+                            </div>
+                            <div class="text-number d-inline">
+                                <label>
+                                    до <input class="numbers" name="CostTo" type="number" min="0" step="any" 
+                                    value="@Model.FilterViewModel.SelectedCostTo"/>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="list-group-item">
+                        @* <a href="#" class="btn btn-filter">Применить фильтр</a> *@
+                        <input class="btn btn-filter" type="submit" value="Применить фильтр">
+                    </div>
+                </form>
                 <div class="list-group-item">
                     <h4 class="text-title">Сортировки:</h4>
                     <div class="">
+                        
                         <a href="#" class="btn btn-filter">По возрастанию</a>
                         <a href="#" class="btn btn-filter">По убыванию</a>
-                        <a href="#" class="btn btn-filter">По алфавиту</a>
+                        @* <a href="#" class="btn btn-filter">По алфавиту</a> *@
+                        <a class="btn btn-filter" asp-action="Index" asp-route-sortOrder="@(Model.SortViewModel.NameSort)"
+                        
+                        asp-route-CostFrom="@Model.FilterViewModel.SelectedCostForm"
+                        asp-route-CostTo="@Model.FilterViewModel.SelectedCostTo">По алфавиту</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="content">
-        <form method="get">
+        @* <form method="get">
             <div class="form-inline">
                 <label>Категории: </label>
                 <select name="categoryId" asp-items="Model.FilterViewModel.Categories" class="form-control"></select>
 
                 <input type="submit" value="Фильтр" class="btn btn-outline-dark" />
             </div>
-        </form>
+        </form> *@
 
         <table class="table">
             <tr>
                 <th>
-                    <a asp-action="Index" asp-route-sortOrder="@(Model.SortViewModel.NameSort)"
-                        asp-route-categoryId="@(Model.FilterViewModel.SelectedCategory)">Имя</a>
+                    @* <a asp-action="Index" asp-route-sortOrder="@(Model.SortViewModel.NameSort)"
+                        asp-route-categoriesId="@(Model.FilterViewModel.SelectedCategories)">Имя</a> *@
                 </th>
                 <th>
-                    <a asp-action="Index" asp-route-sortOrder="@(Model.SortViewModel.CostSort)"
-                        asp-route-categoryId="@(Model.FilterViewModel.SelectedCategory)">Цена</a>
+                    @* <a asp-action="Index" asp-route-sortOrder="@(Model.SortViewModel.CostSort)"
+                        asp-route-categoryId="@(Model.FilterViewModel.SelectedCategory)">Цена</a> *@
                 </th>
             </tr>
             @foreach (var product in Model.Products)
@@ -155,21 +161,21 @@
         </table>
         @if (Model.PageViewModel.HasPreviousPage)
         {
-            <a asp-action="Index" asp-route-page="@(Model.PageViewModel.PageNumber - 1)"
-            asp-route-categoryId="@(Model.FilterViewModel.SelectedCategory)"
-            asp-route-sortorder="@(Model.SortViewModel.Current)" class="btn  btn-outline-dark">
+            @* <a asp-action="Index" asp-route-page="@(Model.PageViewModel.PageNumber - 1)"
+                asp-route-categoryId="@(Model.FilterViewModel.SelectedCategory)"
+                asp-route-sortorder="@(Model.SortViewModel.Current)" class="btn btn-outline-dark">
                 <i class="glyphicon glyphicon-chevron-left"></i>
                 Назад
-            </a>
+                </a> *@
         }
         @if (Model.PageViewModel.HasNextPage)
         {
-            <a asp-action="Index" asp-route-page="@(Model.PageViewModel.PageNumber + 1)"
-            asp-route-categoryId="@(Model.FilterViewModel.SelectedCategory)"
-            asp-route-sortorder="@(Model.SortViewModel.Current)" class="btn btn-outline-dark">
+            @* <a asp-action="Index" asp-route-page="@(Model.PageViewModel.PageNumber + 1)"
+                asp-route-categoryId="@(Model.FilterViewModel.SelectedCategory)"
+                asp-route-sortorder="@(Model.SortViewModel.Current)" class="btn btn-outline-dark">
                 Вперед
                 <i class="glyphicon glyphicon-chevron-right"></i>
-            </a>
+                </a> *@
         }
     </div>
 
