--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/Index.cshtml
@@ -4,63 +4,113 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
+
+
+<section class="table-add-product">
+    <div class="create-product">
+            <a asp-action="Create" class="btn-create-product">Create New</a>
+    </div>
+    <table class="table">
+        <thead>
+            <tr class="mx-auto">
+                <th scope="col">
+                    Название товара
+                </th>
+                <th scope="col">
+                    Категория
+                </th>
+                <th scope="col">
+                    Цена
+                </th>
+                <th scope="col">
+                    Описание
+                </th>
+                <th scope="col">
+                    Срок годность
+                </th>
+                <th scope="col"><a asp-action="Create">Create New</a></th>
+            </tr>
+            <tr class="justTh">
+                <th colspan="6"></th>
+            </tr>
+            @* <tr>
+                <th>
                 @Html.DisplayNameFor(model => model.CountProducts)
-            </th>
-            <th>
+                </th>
+                <th>
                 @Html.DisplayNameFor(model => model.ProductName)
-            </th>
-            <th>
+                </th>
+                <th>
                 @Html.DisplayNameFor(model => model.Cost)
-            </th>
-            <th>
+                </th>
+                <th>
                 @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
+                </th>
+                <th>
                 Срок годности
-            </th>
-            <th>
+                </th>
+                <th>
                 @Html.DisplayNameFor(model => model.ProductCategory)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CountProducts)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cost)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreateDate) - 
-                @Html.DisplayFor(modelItem => item.ExpirationDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductCategory.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+                </th>
+                <th></th> *@
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <th scope="row">
+                        @Html.DisplayFor(modelItem => item.ProductName)
+                    </th>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ProductCategory.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Cost)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CreateDate) -
+                        @Html.DisplayFor(modelItem => item.ExpirationDate)
+                    </td>
+                    <td>
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn-details btn-product">Просмотр</a>
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn-edit btn-product">Редактирование</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn-delete btn-product">Удаление</a>
+                    </td>
+                </tr>
+
+                @* <tr>
+                    <td>
+                    @Html.DisplayFor(modelItem => item.CountProducts)
+                    </td>
+                    <td>
+                    @Html.DisplayFor(modelItem => item.ProductName)
+                    </td>
+                    <td>
+                    @Html.DisplayFor(modelItem => item.Cost)
+                    </td>
+                    <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+                    <td>
+                    @Html.DisplayFor(modelItem => item.CreateDate) -
+                    @Html.DisplayFor(modelItem => item.ExpirationDate)
+                    </td>
+                    <td>
+                    @Html.DisplayFor(modelItem => item.ProductCategory.Name)
+                    </td>
+                    <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                    </tr> *@
+            }
+        </tbody>
+    </table>
+
+</section>
