--- a/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="~/css/LayoutHeader.css" />
     <link rel="stylesheet" href="~/css/LayoutBody.css" />
     <link rel="stylesheet" href="~/css/LayoutFooter.css" />
+    <link rel="stylesheet" href="~/css/ProductContainersIndex.css" />
     <link rel="stylesheet" href="~/css/AdditionalHomeIndex.css" />
     <link rel="stylesheet" href="~/css/CardProduct.css" />
     <link rel="stylesheet" href="~/css/MainHomeIndex.css" />
