--- a/CosmeticShop/CosmeticShop/wwwroot/css/ProductContainersIndex.css
+++ b/CosmeticShop/CosmeticShop/wwwroot/css/ProductContainersIndex.css
@@ -14,7 +14,7 @@ body .table-add-product .btn-create-product{
     width: auto;
     background-color: #FFF8F4!important;
 
-    font-family: Raleway;
+    font-family: 'Raleway';
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
@@ -23,13 +23,13 @@ body .table-add-product .btn-create-product{
     letter-spacing: 0.02em;
     color: #A93E4D;
 }
-body .table-add-product .table{
+body .table-add-product .table, body .table-add-product .table-categories{
     background-color: #FFF8F4!important;
     padding: 40px 20px !important;
     font-family: Crimson Text;
     border: 1px solid rgba(61, 29, 0, 0.2);
 }
-body .table-add-product .table thead{
+body .table-add-product .table thead, body .table-add-product .table-categories thead{
     
     background-color: rgba(214, 204, 195, 0.5);
     padding: 31px 20px;
@@ -39,12 +39,12 @@ body .table-add-product .table thead{
     line-height: 33px;
     text-align: left !important;
 }
-body .table-add-product .table thead tr:last-child{
+body .table-add-product .table thead tr:last-child, body .table-add-product .table-categories thead tr:last-child{
     height: 40px;
     background-color: #FFF8F4 !important;
     border: 1px solid #FFF8F4;
 }
-body .table-add-product .table tbody {
+body .table-add-product .table tbody, body .table-add-product .table-categories tbody {
     font-family: Crimson Text;
     font-style: normal;
     font-weight: normal;
@@ -52,7 +52,7 @@ body .table-add-product .table tbody {
     line-height: 22px;
     text-align: left;
 }
-body .table-add-product .table tbody tr, .table-add-product .table thead tr{
+body .table-add-product .table tbody tr, .table-add-product .table thead tr, body .table-add-product .table-categories tbody tr, .table-add-product .table-categories thead tr{
     border: 1px solid rgba(61, 29, 0, 0.2);
 }
 body .table-add-product .table tbody td:nth-child(1) {
@@ -73,12 +73,12 @@ body .table-add-product .table tbody td:nth-child(5) {
 body .table-add-product .table tbody td:nth-child(6) {
     width: 315px;
 }
-body .table-add-product .table .table-thead tr th{
+body .table-add-product .table .table-thead tr th, body .table-add-product .table-categories .table-thead tr th{
     font-weight: normal !important;
     text-align: center;
     padding: 20px 31px;
 }
-body .table-add-product .table .btn-product{
+body .table-add-product .table .btn-product, body .table-add-product .table-categories .btn-product{
     font-family: Crimson Text;
     font-style: normal;
     font-weight: normal;
@@ -88,22 +88,50 @@ body .table-add-product .table .btn-product{
     color: red;
     margin-right: 10px;
 }
-body .table-add-product .table .btn-product:last-child{
+body .table-add-product .table .btn-product:last-child, body .table-add-product .table-categories .btn-product:last-child{
     margin-right: 15px;
 }
-body .table-add-product .table .btn-product:first-child{
+body .table-add-product .table .btn-product:first-child, body .table-add-product .table-categories .btn-product:first-child{
     margin-left: 15px;
 }
-body .table-add-product .table .btn-details{
+body .table-add-product .table .btn-details, body .table-add-product .table-categories .btn-details{
     color: #3A998E !important;
 }
-body .table-add-product  .table .btn-edit{
+body .table-add-product  .table .btn-edit, body .table-add-product  .table-categories .btn-edit{
     color: rgba(62, 79, 169, 0.8) !important;
 }
-body .table-add-product .table .btn-delete{
+body .table-add-product .table .btn-delete, body .table-add-product .table-categories .btn-delete{
     color: #A93E4D !important;
 }
 
-body .table-add-product .table tbody tr:hover{
+body .table-add-product .table tbody tr:hover, body .table-add-product .table-categories tbody tr:hover{
     color: #A93E4D;
+}
+
+/* ---------------table-categories----------------- */
+
+
+body .table-add-product .table-categories thead th:nth-child(1) {
+    width: 1094px;
+    padding: 10px 30px;
+}
+body .table-add-product .table-categories thead th:nth-child(2) {
+    border-right: 1px solid rgba(61, 29, 0, 0.2);
+  
+}
+body .table-add-product .table-categories tbody td:nth-child(1) {
+    width: 1094px;
+    padding: 8px 30px;
+}
+body .table-add-product .table-categories tbody td:nth-child(2){
+    width: 400px;
+    padding: 8px 30px;
+    border-right: 1px solid rgba(61, 29, 0, 0.2);
+    border-left: 1px solid rgba(61, 29, 0, 0.1);
+}
+.product-cat-btn{
+    margin: 10px 302px 0 302px;
+}
+.product-edit-btn{
+    margin: 10px 298px 0 298px;
 }
