--- a/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="~/css/CardProduct.css" />
     <link rel="stylesheet" href="~/css/MainHomeIndex.css" />
     <link rel="stylesheet" href="~/css/TraidingFilter.css" />
+    <link rel="stylesheet" href="~/css/CreateEditProduct.css" />
 
 </head>
 
