--- a/CosmeticShop/CosmeticShop/Views/ProductCategories/Create.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductCategories/Create.cshtml
@@ -4,30 +4,46 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>ProductCategory</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+
+
+
+
+
+<section class="create-product-container">
+
+    <h2>Добавление категории</h2>
+    <div class="container-prosuct">
+
+        <div class="row">
+            <div class="col">
+                <form asp-action="Create">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Name" class="text-lable control-label">Название категории</label>
+                        <input asp-for="Name" class="form-input form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
+                    </div>
+                    @* <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                        </div> *@
+                    <div class="product-cat-btn">
+
+                        <div class="form-group d-inline">
+
+                            <a asp-action="Index" class="input-back">Вернуться назад</a>
+                        </div>
+                        <div class="form-group d-inline">
+                            <input type="submit" value="Добавить категорию" class="btn-create btn" />
+
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+</section>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
