--- a/CosmeticShop/CosmeticShop/Views/ProductCategories/Edit.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductCategories/Edit.cshtml
@@ -4,7 +4,43 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+
+<section class="create-product-container">
+
+    <h2>Редактирование категории</h2>
+    <div class="container-prosuct">
+
+        <div class="row">
+            <div class="col">
+                <form asp-action="Edit">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="Id" />
+                    <div class="form-group">
+                        <label asp-for="Name" class="text-lable control-label">Название категории</label>
+                        <input asp-for="Name" class="form-input form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
+                    </div>
+                    @* <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                        </div> *@
+                    <div class="product-edit-btn">
+
+                        <div class="form-group d-inline">
+
+                            <a asp-action="Index" class="input-back">Вернуться назад</a>
+                        </div>
+                        <div class="form-group d-inline">
+                            <input type="submit" value="Сохранить категорию" class="btn-create btn" />
+
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
+@* <h1>Edit</h1>
 
 <h4>ProductCategory</h4>
 <hr />
@@ -27,8 +63,8 @@
 
 <div>
     <a asp-action="Index">Back to List</a>
-</div>
+</div> *@
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
